# akira

./: .gitignore  CMakeLists.txt  README.md
includes/: event_handler.h  structs.h
src/: app.c  app.h  entity.c  entity.h  enums.h  event_handler.c  event_handler.h  game.c  game.h  input.c  input.h  main.c  structs.h  system.c  system.h
